--- a/static/css/materials.css
+++ b/static/css/materials.css
@@ -1,134 +1,33 @@
-/*
-HTML5 Doctor Reset v1.6.1
-http://html5doctor.com/html-5-reset-stylesheet/
-*/
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-body {
-    line-height:1;
-}
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
-}
-nav ul {
-    list-style:none;
-}
-blockquote, q {
-    quotes:none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
-}
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
-}
-/* change colours to suit your needs */
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
-}
-/* change colours to suit your needs */
-mark {
-    background-color:#ff9;
-    color:#000;
-    font-style:italic;
-    font-weight:bold;
-}
-del {
-    text-decoration: line-through;
-}
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
-}
-table {
-    border-collapse:collapse;
-    border-spacing:0;
-}
-/* change border colour to suit your needs */
-hr {
-    display:block;
-    height:1px;
-    border:0;
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
-}
-input, select {
-    vertical-align:middle;
-}
-ol li{list-style: none;}
-ul li{list-style: none;}
-input, select {
-    vertical-align:middle;
-}
-hr {
-    display:block;
-    height:1px;
-    border:0;
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
-}
-a{
-    text-decoration: none;
-}
-.element::-webkit-scrollbar {
-    width: 0;
-  }
-  ::-webkit-scrollbar {
-    width: 0;
-  }
-/* CONTENT STARTS */
 
-body{
-    background-color: #EBF0FF;
-    font-family: 'Bellota text';
-}
-
-.fullsite{
-    max-width: 100%;
-    max-height: 100vh;
+.content{
+    flex: 1 0 auto;
+    background-color: #CFDDFF;
+    margin: 0 auto;
     text-align: center;
 }
-.content_wrapper{
-    padding: 150px 0 30px;
+.content_empty {
+    height: 100px;
     margin: 0 auto;
-    width: 1728px;
-    font-size: 28px;
+    text-align: center;
+}
+.content__wrapper{
+    width: 1200px;
+    color: #131338;
+    background-color: white;
+    margin: 0 auto;
+    text-align: center;
 }
 .content_entry{
     margin-bottom: 50px;
+    margin: 0 auto;
+    text-align: center;
 }
-.content_entry p{
+.content_entry-title h2{
+    color: #131338;
     font-size: 40px;
     font-weight: 600;
+    margin: 0 auto;
+    text-align: center;
 }
 .topic_title{
     width: 100vw;
@@ -140,10 +39,9 @@ body{
     color: white;
     font-weight: 600;
     font-size: 30px;
+    margin: 0 auto;
+    text-align: center;
     line-height: 70px;
-}
-a:visited{
-    color: white;
 }
 .list__wrapper{
     padding: 30px;
