--- a/static/css/base_styles.css
+++ b/static/css/base_styles.css
@@ -13,7 +13,7 @@ fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
+time, mark, audio, video, *{
     margin:0;
     padding:0;
     border:0;
@@ -25,7 +25,6 @@ time, mark, audio, video {
 body {
     line-height:1;
 }
-::-ms-clear{display: none;}
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section {
     display:block;
@@ -81,195 +80,144 @@ hr {
     margin:1em 0;
     padding:0;
 }
+input, select {
+    vertical-align:middle;
+}
 ol li{list-style: none;}
 ul li{list-style: none;}
 input, select {
     vertical-align:middle;
 }
-
-/* FONT STYLE STARTS*/
-
-/* bellota-text-regular - latin */
-@font-face {
-    font-family: 'Bellota Text';
-    font-style: normal;
-    font-weight: 400;
-    src: local(''),
-         url('../fonts/bellota-text-v16-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/bellota-text-v16-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+hr {
+    display:block;
+    height:1px;
+    border:0;
+    border-top:1px solid #cccccc;
+    margin:1em 0;
+    padding:0;
+}
+a{
+    text-decoration: none;
+}
+a:visited{
+    color: white;
+}
+.element::-webkit-scrollbar {
+    width: 0;
   }
-  /* bellota-text-700 - latin */
-  @font-face {
-    font-family: 'Bellota Text';
-    font-style: normal;
-    font-weight: 700;
-    src: local(''),
-         url('../fonts/bellota-text-v16-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/bellota-text-v16-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  ::-webkit-scrollbar {
+    width: 0;
   }
-* {box-sizing: border-box; text-decoration: none;}
-/* FONT STYLE ENDS*/
+html{
+    height: 100%;
+}
 
+/* HEADER FOOTER */
 
+.item_link:hover{
+    color: #b1bde2;
+}
 
-/* CONTENT START */
+body{
+    font-family: 'Bellota text';
+    font-weight: 200;
+    color: white;
+    font-size: 20px;
+    height: 100%;
+}
 .fullsite{
-    margin: 0 auto;
-    max-width: 100%;
-    max-height: 100vh;
-    text-align: center;
+    display: flex;
+	flex-direction: column;
+	min-height: 100%;
 }
-
-body {
-    font-family: 'Bellota Text';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 28px;
-}
-
 .header{
     position: fixed;
     z-index: 20;
-    margin: 0 auto;
     width: 100%;
-    height: 114px;
+    height: 66px;
     background-color: #1E1F29;
+    margin: 0 auto;
 }
 .header_wrapper{
-    max-width: 1726px;
-    min-width: 1726px;
-    margin: auto;
+    width: 1728px;
+    height: inherit;
+    margin: 0 auto;
 }
 .header_wrapper_wrap{
     display: flex;
-    flex-wrap: wrap;
-    align-items: flex-end;
-    justify-content: space-between;
+    height: inherit;
+    justify-content: space-around;
+    align-items: center;
+}
+.categories{
+    margin-right: 120px;
+    width: 50%;
 }
 .content__list{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
+.link{
+    height: 50px;
+}
+.signin_bottom{
+    margin-right: 5px;
+    padding: 8px 5px;
+    background-color: #ED1462;
+    border-radius: 10px;
+}
+.signin_bottom:hover{
+    background-color: #CB1657;
+    color: white;
+    transition-duration: 0.2s;
 }
 .wrapper_logo{
+    width: 550px;
+    height: inherit;
+    align-items: center;
     display: flex;
-    flex-wrap: wrap;
-}
-.header_item{
-    margin-right: 106px;
-    color: white;
-}
-.header_item:last-child{
-    margin-right: 114px;
-}
-.item_link{
-    font-weight: 400;
-    font-size: 24px;
-    color: white;
-}
-.item_link:hover{
-    color: #AEB1C5;
-}
-.logo-link{
-    margin-left: 90px;
-    margin-top: 24px;
-}
-ul li{
-    margin-bottom: 46px;
-}
-form {
-  position: relative;
-  width: 450px;
-  margin: 37px 10px 37px 40px;
-  background: #ffffff;
-  border-radius: 90px;
-}
-input, button {
-  border: none;
-  outline: none;
-  background: transparent;
-
-}
-input {
-  width: 100%;
-  height: 42px;
-  padding-left: 15px;
-
-}
-button {
-  height: 42px;
-  width: 42px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
-}
-button:before {
-    content: "";
-    display: inline-block;
-    margin-right: 14px;
-    margin-top: 4px;
-    width: 25px;
-    height: 25px;
-    background-image: url("media/svg/search.svg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-input::placeholder{
-    font-size: 14px;
-    font-weight: 400;
-}
-.main{
-    position: relative;
-    max-width: 1726px;
-    height: 100vh;
-    margin: 0 auto;
-    text-align: center;
+    justify-content: space-around;
 }
 
-/* FOOTER page*/
+
+
+
+
+
 .footer{
-    position: relative;
-    width: 1726px;
-    height: 400px;
+	flex: 0 0 auto;
     background-color: #212D3F;
-    line-height: 60px;
 }
-.faq{
-    position: absolute;
-    left: 250px;
-    top: 100px;
-    text-align: left;
-    color: white;
+.footer_wrapper{
+    width: 1200px;
+    margin: 0 auto;
+    padding: 40px;
 }
-.title_foot{
-    text-align: center;
-    font-size: 40px;
-    margin-bottom: 30px;
+.footer_wrapper_wrap{
+    display: flex;
+
 }
-.about_us{
-    position: absolute;
-    right: 200px;
-    top: 100px;
-    text-align: left;
-    color: white;
+.footer_title{
+    font-size: 22px;
+    font-weight: 800;
+    color: #d6dbea;
 }
-.privacy_foot{
-    background: url(/media/svg/privacy.svg) left no-repeat;
-    padding: 0 60px 0;
+.footer_list li{
+    color: rgb(199, 209, 217);
+    font-size: 20px;
+    margin-top: 20px;
+    display: flex;
 }
-.email_foot{
-    background: url(/media/svg/email.svg) left no-repeat;
-    padding: 0 60px 0;
+.footer_svg{
+    width: 20px;
+    height: 20px;
+    padding-right: 10px;
 }
-.address_foot{
-    padding: 0 20px 0;
+.footer__term{
+    margin-right: 30px;
 }
-.contacts_foot{
-    padding: 0 20px 0;
-}
-.item_link_footer{
-    font-weight: 400;
-    font-size: 24px;
-    color: white;
+.footer_list .item_link:hover{
+    text-decoration: underline;
+    color: rgb(174, 197, 216);
 }
