--- a/static/css/st.css
+++ b/static/css/st.css
@@ -1,118 +1,153 @@
-/* Main page*/
-ol li{list-style: none;}
-ul li{list-style: none;}
-
-.main_info{
-    position: absolute;
-    width: 700px;
-    height: 400px;
-    background: rgba(0, 0, 0, 0.29);
-    border-radius: 30px;
-    left: 960px;
-    top: 265px;
-    color: #FFFFFF;
+.content{
+    flex: 1 0 auto;
 }
-
-.main_title{
-    font-size: 40px;
-    margin-top: 30px;
-}
-.main_it{
-    margin: 26px 40px 13px;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 50px;
-}
-.main_button{
+.content_main-pic{
+    position: relative;
+    width: 1728px;
     margin: 0 auto;
-    width: 351px;
-    height: 76px;
-    background: #0BA1EE;
+}
+.content_quiz-entry{
+    position: absolute;
+    width: 600px;
+    right: 150px;
+    top: 260px;
+    padding: 40px;
+    text-align: center;
+    font-size: 30px;
+    color: #cfd2d5;
+    background: rgba(0, 0, 0, 0.3);
     border-radius: 30px;
-    transition-duration: 0.3s;
 }
-.button-link{
-    font-weight: 400;
-    font-size: 37px;
-    color: #FFFFFF;
+.quiz-entry__title h1{
+    font-size: 40px;
 }
-.button-link p{
-    padding-top: 16px;
+.quiz-entry__text{
+    position: relative;
+    margin: 20px;
+    line-height: 1.4;
 }
-.main_button:hover{
+.quiz-entry__link{
+    position: absolute;
+    padding: 10px 0;
+    border-radius: 30px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    margin-top: 20px;
+    text-align: center;
+    background-color: #0BA1EE;
+    transition-duration: 0.6s;
+}
+.quiz-entry__link a{
+    font-weight: bold;
+    font-size: 34px;
+}
+.quiz-entry__link:hover{
     box-shadow: 0px 0px 20px #0BA1EE;
 }
 
-.main_question{
-    position: absolute;
-    margin: -40px auto;
-    width: 805px;
-    background: #222544;
-    border-radius: 15px;
-    left: 500px;
-    top: 1140px;
+.main-pic__wrapper{
+    width: inherit;
 }
-ol{
+.main-pic__wrapper-wrap{
+    width: inherit;
+    position: relative;
+    z-index: 2;
+    padding: 40px 0;
+    margin-top: -140px;
+}
+.main-pic__questions{
+    margin: 0 auto;
+    padding: 20px 60px;
+    width: 700px;
+    text-align: center;
     font-size: 35px;
-    color: #FFFFFF;
-}
-ol li{
-    padding: 15px;
-}
-ol li:first-child{
-    padding-top: 0px;
-}
-ol li:last-child{
-    padding-bottom: 40px;
-}
-.hrs{
-    margin: 60px auto;
-    width: 616px;
-    height: 0;
-    border-radius: 3px;
-    border: 2px solid white;
-}
-.hrs:last-child{
-    margin: 20px auto 60px;
-}
-.hrlast{
-    border: 3px solid #212D3F;
+    line-height: 1.7;
+    background: #1E1F29;
+    border-radius: 10px;
 }
 
-.empty{
-    width: 100%;
-    height: 440px;
+.content__answer{
+    padding-bottom: 20px;
+    margin-bottom: 30px;
 }
-
-.main_answers_block{
-    margin-bottom: 50px;
-    width: 1700px;
-    border-top: 2px solid #000 ;
-    border-bottom: 2px solid #000 ;
-}
-.main_answers{
-    width: 1400px;
-    background-color: #222544;
-    margin: 90px auto;
-    border-radius: 5px;
-}
-.answers_categories{
+.answer__wrap{
     width: 1100px;
-    margin: 10px auto;
-    padding-top: 80px;
+    padding: 40px;
+    margin: 0 auto;
+    background-color: #222544;
 }
-.answers_categories:last-child{
-    padding-bottom: 80px;
+.content__quiz{
+    margin-bottom: 40px;
+    text-align: center;
 }
+.content__quiz-title{
+    background-color: #0E4597;
+    padding: 36px 0;
+    font-size: 40px;
+}
+.quizzes__wrapper{
+    width: 1200px;
+    color: #222544;
+    margin: 0 auto;
+}
+.quizzes-description{
+    margin: 50px 0;
+    line-height: 1.5;
+    font-size: 30px;
+}
+.quizzes-row{
+    width: inherit;
+}
+.quiz-row-odd{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 70px;
+    margin-bottom: 80px;
+}
+.row_left, .row_right {
+    width: 400px;
+}
+.row-title{
+    background-color: #5F4CD7;
+    padding: 20px 0;
+    color: white;
+    border-radius: 10px 10px 0 0;
+    font-size: 28px;
+}
+.row-description{
+    font-size: 27px;
+    height: 170px;
+    background: linear-gradient(179.55deg, #40475B 0.39%, rgba(64, 71, 91, 0) 79.52%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.row-link{
+    background-color: #FD4285;
+    padding: 15px 20px;
+    font-size: 25px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    transition-duration: 0.5s;
+}
+.row-link:hover{
+    box-shadow: 0px 0px 20px 8px rgba(253, 66, 133, 0.25);
+}
+
+
+
 
 .odd{
     position: relative;
     color: white;
     width: 500px;
     margin-bottom: 70px;
-}
-.odd:last-child{
-    margin-bottom: 0;
+    text-align: center;
 }
 .answer_row{
     position: relative;
@@ -121,6 +156,7 @@ ol li:last-child{
     position: relative;
     color: white;
     width: 500px;
+    text-align: center;
 }
 .even_wrap{
     position: absolute;
@@ -148,103 +184,5 @@ ol li:last-child{
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
     border-radius: 25px;
 	padding: 15px 20px;
-    width: 100%;
-}
-.question_title {
-	background-color: #1E1F29;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
-    border-radius: 25px;
-	padding: 15px 20px;
-    width: auto;
-}
-
-
-.categories_block{
-    width: 1726px;
-}
-.quizzes_entry{
-    height: 160px;
-    background-color: #0E4597;
-}
-.entry{
-    padding-top: 50px;
-    color: white;
-    font-size: 50px;
-}
-.justtext{
-    font-size: 40px;
-    line-height: 50px;
-    margin: 80px auto;
-}
-
-
-
-
-
-.blocks_wrapper{
-    width: 1100px;
-    margin: 0 auto;
-}
-.category_odd{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: 90px;
-}
-.odd_pic{
-    width: 450px;
-}
-.pic_name{
-    width: 100%;
-    background-color: #736BE2;
-    border-radius: 10px 10px 0px 0px;
-    color: white;
-    font-size: 35px;
-    text-align: center;
-    padding: 17px;
-}
-.img_pic{
-    width: 100%;
-}
-.odd_text{
-    width: 450px;
-}
-.text_gradient{
-    background: linear-gradient(179.55deg, #40475B 0.39%, rgba(64, 71, 91, 0) 82.52%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    width: 450px;
-    height: 170px;
-    line-height: 1.1;
-    font-size: 26px;
-}
-.quiz_button {
-    width: 400px;
-    height: 70px;
-    background: #FD4285 ;
-    border-radius: 90px;
-    margin: 0 auto;
-    transition-duration: 0.3s;
-}
-.quiz_button a{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 15px;
-}
-.button_link{
-    color: white;
-    font-size: 25px;
-}
-.icon_link{
-    width: 35px;
-}
-.quiz_button:hover{
-    box-shadow: 0px 0px 20px 4px rgba(171, 54, 95, 0.342);
-}
-.quiz_button:active{
-    margin-top: 2px;
-    width: 390px;
-    height: 65px;
+	width: 460px;
 }
