--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                                 <a href="{% url 'materials' %}" class="item_link">Materials</a>
                             </li>
                             <li class="header_item">
-                                <a href="{% url 'materials' %}" class="item_link">About us</a>
+                                <a href="{% url 'about_us' %}" class="item_link">About us</a>
                             </li>
                             <li class="header_item">
                                 {% if user.is_authenticated %}
