--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -27,7 +27,7 @@
                     <p>Already have an account?</p>
                     <a href="{% url 'login' %}">Log in</a>
                     <p class="lisences">By signing up, you agree to the
-                    <a href="" class="">Terms of Service</a>
+                    <a href="{% url 't_service' %}" class="">Terms of Service</a>
                     and <a href="{% url 'privacy' %}" class="">Privacy policy</a></p>
                 </div>
             </div>
